--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -15,7 +15,18 @@
 
 <div class="container">
     <div class="profile-section">
-        <div class="profile">Profile</div>
+        <div>
+            <a class="profile" href="/profil">Profil</a>
+        </div>
+        <div class="star"></div>
+        <div class="star1"></div>
+        <div class="star2"></div>
+        <div class="star3"></div>
+        <div class="star4"></div>
+        <script src="../script/Star.js"></script>
+        <div>
+            <a class="contact" href="/contact">Contact</a>
+        </div>
     </div>
     <div class="main-section">
         <div class="title">Bienvenue sur le Forum</div>
@@ -25,6 +36,12 @@
         </div>
     <div class="side-section">
         <div class="categories">
+            <div class="star5"></div>
+            <div class="star6"></div>
+            <div class="star7"></div>
+            <div class="star8"></div>
+            <div class="star9"></div>
+            <script src="../script/Star2.js"></script>
             <form id="createCategoryForm" method="POST" action="/CreateCategory">
                 <input type="text" class="createCategory" name="categoryName" placeholder="Enter new category">
                 <button class="categoryBtn" type="submit">Create</button>
