--- a/template/html/contact.html
+++ b/template/html/contact.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="../css/contact.css">
 </head>
 <body>
+<div class="returnHome-container">
+    <div>
+        <a class="returnHome" href="/accueil">Home</a>
+    </div>
+</div>
 <div class="card-container">
     <div class="card1">
         <img src="./image/profilAlexis.jpg" alt="Alexis" style="width:100%">
