--- a/template/html/post.html
+++ b/template/html/post.html
@@ -12,7 +12,13 @@
 <div class="container">
     <div class="profile-section">
         <div>
-        <button class="profileBtn" type="submit" formmethod="get">Profile</button>
+            <a class="profileBtn" href="/profil">Profil</a>
+        </div>
+        <div>
+            <a class="returnHome" href="/accueil">Home</a>
+        </div>
+        <div>
+            <a class="contact" href="/contact">Contact</a>
         </div>
         <div class="star"></div>
         <div class="star1"></div>
