--- a/template/html/profil.html
+++ b/template/html/profil.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil</title>
     <link rel="stylesheet" href="../css/profil.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
-<div class="header">Nom du forum</div>
+<div class="title">Forum</div>
 <button class="back-button" onclick="goBack()">Retour</button>
 <script>
     function goBack() {
@@ -24,12 +26,10 @@
             <div class="info-item"><span id="birthdate-section">Birthdate :</span><p>bonjour</p></div>
             <div class="info-item"><span id="email">Mail :</span><p>bonjour</p></div>
 
-            <div class="info-item"><span id="other-link">Other link :</span></div>
             <div class="links-section">
-                <a href="#" id="google-link">Google</a>
-                <a href="#" id="github-link">Github</a>
-                <a href="#" id="riot-client-link">Riot Games</a>
-                <a href="#" id="facebook-link">Facebook</a>
+                <a href="#" id="google-link"><i class='bx bxl-google'></i></a>
+                <a href="#" id="github-link"><i class='bx bxl-github'></i></a>
+                <a href="#" id="facebook-link"><i class='bx bxl-meta' ></i></a>
             </div>
         </div>
     </div>
