--- a/template/css/profil.css
+++ b/template/css/profil.css
@@ -1,30 +1,51 @@
 body {
-    background-color: #1d469a;
     color: #FFFFFF;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-}
-
-.header {
-    background-color: #408EC6;
-    color: #000000;
-    padding: 20px;
-    text-align: center;
+    background-image: url('/image/fond-ecran-forum.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+    overflow: auto; /* Permet le défilement vertical */
 }
 
 .profile-wrapper {
     display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    position: relative;
-    margin-top: 50px;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    position: absolute;
+    margin-top: 1px;
+    margin-left: 20%;
+    width: 100vh;
+    height: 80%;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
 }
 
 .profile-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 10px;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.1px);
+    -webkit-backdrop-filter: blur(1.1px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    flex-shrink: 0;
+    width: 80vh;
+    margin-bottom: 20px;
+    margin-top: 2.5vh;
 }
 
 .profile-pic {
@@ -40,10 +61,10 @@ body {
 }
 
 .info-section {
-    background-color: #85aefa;
     padding: 20px;
     border-radius: 10px;
-    width: 300px;
+    width: 30vh;
+    /* Converti de 300px à 30vh pour plus de cohérence */
 }
 
 .info-section .info-item {
@@ -64,23 +85,58 @@ body {
 
 .links-section {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    width: 100%;
     margin-top: 10px;
 }
 
 .links-section a {
-    background-color: #408EC6;
-    color: #FFFFFF;
-    padding: 5px;
-    border-radius: 5px;
-    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    padding: 10px;
+    text-align: center;
+    font-weight: bold;
+    margin: 0 5px;
+    margin-top: 20px;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
+    width: calc(100% / 4 - 10px); /* Ajustez selon le nombre de liens et l'espacement souhaité */
+    transition: 0.3s;
 }
+
+.links-section i {
+    font-size: 30px; /* Ajustez la taille de l'icône si nécessaire */
+}
+
+.links-section #google-link:hover{
+    background: linear-gradient(135deg, #4285F4 25%, #34A853 25%, #34A853 50%, #FBBC05 50%, #FBBC05 75%, #EA4335 75%);
+    color: white;
+}
+.links-section #github-link:hover{
+    background: white;
+    font-weight: bold;
+    color: black;
+}
+
+.links-section a#facebook-link:hover {
+    background: linear-gradient(135deg, #00A4E4, #1877F2);
+    color: white;
+}
+
+
 
 .birthdate-section {
     background-color: #408EC6;
     color: #000000;
     padding: 10px;
-    width: 200px;
+    width: 20vh;
+    /* Converti de 200px à 20vh pour plus de cohérence */
     position: absolute;
     right: 0;
     top: 50px;
@@ -88,11 +144,61 @@ body {
 }
 
 .back-button {
-    background-color: #408EC6;
+    font-size: 20px;
     color: #FFFFFF;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 10px;
     text-decoration: none;
     margin: 20px;
     display: inline-block;
+    cursor: pointer;
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
+}
+
+.topic-content {
+    padding: 10px;
+    margin: 20px;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.15);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(1.1px);
+    -webkit-backdrop-filter: blur(1.1px);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    flex-shrink: 0;
+    /* Empêche la réduction */
+    width: 80vh;
+    /* Converti de 80% à 80vh */
+}
+
+.profile-section {
+    background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    border: 1px solid rgba(255, 255, 255, 0.55);
+}
+/* Cible les span avec des ID spécifiques et applique le style gras */
+#username, #name, #firstname, #birthdate-section, #email {
+    font-weight: bold;
+    color: black;
+}
+
+.title {
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    padding: 20px;
+    margin-bottom: 10px;
+    background: rgba(44, 152, 155, 0.75);
+    border-radius: 60px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4.7px);
+    -webkit-backdrop-filter: blur(4.7px);
+    border: 1px solid rgba(44, 152, 155, 0.3);
 }
