[main/Peaufinages] Update de doubles boutons, et debut de lien entre bdd et topics A continuer et finir

--- a/template/css/profil.css
+++ b/template/css/profil.css
@@ -208,11 +208,6 @@ body {
     color: #000000;
     padding: 10px;
     width: 20vh;
-<<<<<<< HEAD
-        /* Converti de 200px à 20vh pour plus de cohérence */
-=======
-    /* Converti de 200px à 20vh pour plus de cohérence */
->>>>>>> FrontRoutes
     position: absolute;
     right: 0;
     top: 50px;
@@ -227,30 +222,6 @@ body {
     margin: 20px;
     display: inline-block;
     cursor: pointer;
-<<<<<<< HEAD
-        background: rgba(255, 255, 255, 0.31);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(6.5px);
-        -webkit-backdrop-filter: blur(6.5px);
-        border: 1px solid rgba(255, 255, 255, 0.55);
-    }
-    
-    .topic-content {
-        padding: 10px;
-        margin: 20px;
-        display: inline-block;
-        background: rgba(255, 255, 255, 0.15);
-        border-radius: 16px;
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(1.1px);
-        -webkit-backdrop-filter: blur(1.1px);
-        border: 1px solid rgba(255, 255, 255, 0.25);
-        flex-shrink: 0;
-        /* Empêche la réduction */
-        width: 80vh;
-        /* Converti de 80% à 80vh */
-=======
     background: rgba(255, 255, 255, 0.31);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -258,7 +229,7 @@ body {
     -webkit-backdrop-filter: blur(6.5px);
     border: 1px solid rgba(255, 255, 255, 0.55);
 }
-
+    
 .topic-content {
     padding: 10px;
     margin: 20px;
@@ -269,11 +240,10 @@ body {
     backdrop-filter: blur(1.1px);
     -webkit-backdrop-filter: blur(1.1px);
     border: 1px solid rgba(255, 255, 255, 0.25);
-    flex-shrink: 0;
-    /* Empêche la réduction */
-    width: 80vh;
-    /* Converti de 80% à 80vh */
+    flex-shrink: 0; /* Empêche la réduction */
+    width: 80vh /* Converti de 80% à 80vh */
 }
+
 
 .profile-section {
     background: rgba(255, 255, 255, 0.31);
@@ -301,7 +271,6 @@ body {
     backdrop-filter: blur(4.7px);
     -webkit-backdrop-filter: blur(4.7px);
     border: 1px solid rgba(44, 152, 155, 0.3);
->>>>>>> FrontRoutes
 }
 
 .profile-section {
