--- a/template/css/accueil.css
+++ b/template/css/accueil.css
@@ -17,6 +17,33 @@ body {
     justify-content: space-between;
 }
 
+.Search-Container{
+    display: flex;
+    justify-content: center;
+}
+
+.Search-Container #SearchBar{
+    display: flex;
+    margin-top: 15px;
+    padding: 10px 10px;
+    font-size: 14px;
+    font-weight: normal;
+    color: #fff;
+    background-color: #4181f8;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    margin-bottom: 8px;
+    top: 1px;
+    position: relative;
+    z-index: 2;
+}
+
+
 .profile-section {
     width: 10%;
     padding: 15px;
@@ -49,6 +76,25 @@ body {
     align-items: center;
     padding: 15px 40px;
     font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #4181f8;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    margin-bottom: 8px;
+    top: 30px;
+    position: relative;
+    z-index: 2;
+}
+.connexion{
+    align-items: center;
+    padding: 10px 25px;
+    font-size: 18px;
     font-weight: bold;
     color: #fff;
     background-color: #4181f8;
@@ -163,7 +209,7 @@ body {
     border-radius: 8px;
 }
 
-.categories, .hashtags {
+.categories, .hashtags, .Search-Container {
     padding: 10px;
     margin-bottom: 10px;
     background: rgba(255, 255, 255, 0.15);
@@ -207,6 +253,24 @@ body {
     cursor: pointer;
     border-bottom: 1px solid #85aefa;
 }
+#searchInput{
+    display: inline-block;
+    align-items: center;
+    margin-bottom: 8px;
+    padding: 8px 10px;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+    background-color: #4181f8;
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s, transform 0.3s;
+    cursor: pointer;
+    border-bottom: 1px solid #85aefa;
+}
 
 .createCategory::placeholder, .createHashtags::placeholder {
     color: #fff;
@@ -228,7 +292,7 @@ body {
     cursor: pointer;
     margin-bottom: 8px;
 }
-.contact:hover, .profile:hover{
+.contact:hover, .profile:hover, .connexion:hover{
     background-color: #8e004e;
     transform: translateY(-3px);
 }
