[main] add profil page with login, and change table user to add birthday and name

--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -88,6 +88,14 @@
             <i class='bx bxs-user'></i>
         </div>
         <div class="input-box">
+            <input type="text" name="name" placeholder="Name" required>
+            <i class='bx bxs-user'></i>
+        </div>
+        <div class="input-box">
+            <input type="date" name="birthday" placeholder="birthday" required>
+            <i class='bx bxs-calendar'></i>
+        </div>
+        <div class="input-box">
             <input type="email" name="email" placeholder="Email" required>
             <i class='bx bxs-envelope'></i>
         </div>
