--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -75,6 +75,11 @@
         </div>
     </div>
 </div>
+<footer>
+    <button id="prevButton" style="display:none;">Précédent</button>
+    <button id="nextButton">Suivant</button>
+
+</footer>
 <script src="../script/category.js"></script>
 <script src="../script/hashtag.js"></script>
 <script src="../script/topic.js"></script>
