[main/Peaufinages] commit pour chagement de branche

--- a/template/html/accueil.html
+++ b/template/html/accueil.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="profile-section">
         <div>
-            {{if .LoggedIn}}
+            {{if .LoggeIn}}
                 <a class="profile" href="/profil">Profil</a>
             {{else}}
                 <a class="connexion" href="/connexion">Connexion</a>
