--- a/template/html/connexion.html
+++ b/template/html/connexion.html
@@ -39,7 +39,7 @@
             <label><input type="checkbox" onclick="setCookies()">Remember me</label>
             <a href="#ForgotPassword">Forgot Password? </a>
         </div>
-        <button type="submit" class="btn">Login</button>
+        <button id="LoginButton" type="submit" class="btn">Login</button>
         <div class="register-link">
             <p>Don't have an account ?
                 <a href="#registerForm">Register</a>
@@ -48,8 +48,8 @@
         <div class="Connexion-Container">
             <div class="other-connexion">
                 <a href="#" id="github-link"><i class='bx bxl-github'></i></a>
-                <a href="#" id="google-link"><i class='bx bxl-google'></i></a>
-                <a href="#" id="facebook-link"><i class='bx bxl-meta'></i></a>
+                <a href="/loginGoogle" id="google-link"><i class='bx bxl-google'></i></a>
+                <a href="/loginFacebook" id="facebook-link"><i class='bx bxl-meta'></i></a>
             </div>
         </div>
         <script>
